# sycl-test-offload

./: .gitignore  CMakeLists.txt  README.md  set_env_vars_clang.bat  set_env_vars_intel.bat
lib/: CMakeLists.txt
lib/src/: base_sycl_api.hpp  sources.cmake  sycl_kernel.cpp  sycl_kernel.hpp  sycl_test_plugin.cpp
src/: sycl_test_offload.cpp
